Styling now matches the rest of the app Issues are now slimmer and don't have as much whitespace Removed card surrounding search and issues Added logout button under name dropdown

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,12 +8,17 @@ body {
     background-attachment: fixed;
 }
 
+#projectsCollaborated {
+  margin-top: 2rem;
+}
+
 .clearfix {
   overflow: auto;
 }
 
-.column > h3 {
-  color: #333 !important;
+.header {
+  text-shadow: 1px 1px black;
+  color: white !important;
 }
 
 .assignee {
@@ -21,15 +26,13 @@ body {
   bottom:0;
 }
 
-.portlet-header {
-  color: #fff !important;
+.portlet-header > a {
+  font-size: 1.15rem;
+  color: #333;
 }
 
-.portlet-header > a {
-  font-size: 18px;
-  color: #fff;
-  outline-color: #fff;
-  outline: inherit;
+.issue.search {
+  margin-right: 20%;
 }
 
 .btn-danger {
@@ -39,12 +42,8 @@ body {
   color: #e53b3b;
 }
 
-.portlet-content {
-  color: #fff !important;
-}
-
 .card-text > p > a {
-  color: #fff !important;
+  color: #333;
 }
 
 .btn-danger:active {
@@ -67,17 +66,25 @@ body {
   right: 0px;
 }
 
-.card {
+.card.project {
   min-height: 200px;
 }
 
-.projectsOwned {
-  /*padding-bottom: 9em;*/
+.card-title {
+  margin-bottom: 1.15rem;
 }
 
 #logo {
   font-family: 'Lobster';
   font-size: 14pt;
+}
+
+.dropdown {
+  float: right;
+}
+
+.ui-sortable-helper {
+  border-color: #e53b3b;
 }
 
 .account-name-nav {
@@ -129,19 +136,38 @@ input[type=text]:focus {
   min-width: 500px;
 }
 
+.blockquote {
+  font-size: 1rem;
+  border-left: .15rem solid #6f6f6f;
+}
+
+#pname {
+  margin-bottom: 1rem;
+}
+
 .column {
   width: 33%;
   float: left;
   padding-bottom: 100px;
 }
 .portlet {
-  margin: 0 1em 1em 0;
+  margin: 0 3em 1em 0;
   padding: 0.3em;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  min-height: 150px;
+  border: 3px;
+  filter: grayscale(25%);
+  text-shadow: none;
+  color: #333;
+}
+.portlet:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .portlet-header {
   padding: 0.2em 0.3em;
   margin-bottom: 0.5em;
   position: relative;
+  background-color: inherit;
 }
 .portlet-toggle {
   position: absolute;
@@ -153,7 +179,8 @@ input[type=text]:focus {
   padding: 0.4em;
 }
 .portlet-placeholder {
-  border: 1px dotted black;
+  border: 1px dotted white;
   margin: 0 1em 1em 0;
-  height: 200px;
+  height: 150px;
+  width: 92%;
 }
